cmake_minimum_required(VERSION 2.8)
project( Image_server )
find_package( OpenCV REQUIRED )
find_package(Threads REQUIRED) #finds pthreads
include_directories( ${OpenCV_INCLUDE_DIRS})
add_subdirectory(csapp)
add_subdirectory(classes)
# link_directories(csapp)
add_executable( client_program clientMain.cpp )
add_executable( server_program serverMain.cpp )
target_link_libraries( client_program LINK_PUBLIC ${OpenCV_LIBS} Threads::Threads csapp client)
target_link_libraries( server_program LINK_PUBLIC ${OpenCV_LIBS} Threads::Threads csapp server)
#target_include_directories( client PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/csapp")
#target_include_directories( server PUBLIC "${PROJECT_BINARY_DIR}" "${PROJECT_SOURCE_DIR}/csapp")